# pti-naska

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml  python-tests.yml
ptinaska/: __init__.py  __main__.py  cli.py
tests/: common.py  test_cli.py  test_version.py
