[metadata]
name = ptinaska
version = attr: ptinaska.__version__
author = attr: ptinaska.__author__
author_email = iaroslavscript@users.noreply.github.com
description = A text-based gui for rsync application.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/iaroslavscript/pti-naska
project_urls =
    Bug Tracker = https://github.com/iaroslavscript/pti-naska/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = rsync
[options]
packages = ptinaska
python_requires = >=3.8
